etos-api/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etos-api
spec:
  template:
    spec:
      volumes:
      - name: shared-logs
        emptyDir: {}
      - name: filebeat-config
        configMap:
          name: etos-api-filebeat-config
      containers:
        - name: etos-api
          volumeMounts:
          - name: shared-logs
            mountPath: /home/etos/logs
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 196Mi
        - name: sidecar
          image: docker.elastic.co/beats/filebeat:7.10.1
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/share/filebeat/logs
          - name: filebeat-config
            mountPath: /usr/share/filebeat/filebeat.yml
            readOnly: true
            subPath: filebeat.yml
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
